  - use the new swig -external-runtime feature to generate swigpyrun.h, this allows
    me to relocate some utility functions from the interface file to utility.h
  - let simuCDCV.py also trace and display the change of total allele frequency.
  - add passOffspringOnly to pyOperator to speed up duringMating pyOperator.
  - add simuPOP coding convension to simuPOP reference manual

version 0.6.10 (Rev90) - Dec, 20th, 2005
  - add recCount(loc) and recCount() to recombinator to track
    the number of recombination event.
  - add mutationCount(loc) and mutationCounts() to muators to track
    the number of mutation event.
  - add atPloidy=[0] to pointMutator.
  - replace lociDist and locusDist by lociPos and locusPos. This kind of term 
    change should be done as soon as possible.
  - add simuRecHotSpot.py which is used to generate SNP sample that can be used
    to estimate recombination rate between markers.
  - convert test_mutator.py to unittest framework.
  - add DBG_DEVEL for developer-level debug information.
  - Make adjustment to how genotype structure is accessed from individual and 
    limit the number of subpopulations to 2^31. Save 8 bytes (24->16) for each
    individual without noticable performance penalty. 
  - fix a tiny bug about optimization mode reporting
  - test_population is better now, but still way to go.
  - separate simuComplexDisease.py into simuComplexDisease.py and 
    analComplexDisease.py. The first script will run simulation and generate
    a population saved in binary format. The second script will run the old
    analyses (apply penetrance function, plot figures, apply genehunter etc.)
  - add more info to saved config file. (Add a command  line script)
  - simuOpt does not load wx automatically when --noDialog is used.
  - fix a memory leak problem with genotype structure introduced in 0.6.9.
  - fix a memory leak problem with PyObject->double conversion.